# IntelCLaw

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  config.yaml  index.html  main.py  openclaw_instructions.txt  pyproject.toml  setup.bat  start.bat  test_tool_output.txt  test_web_chat.py
data/: working_memory.db
data/vector_db/: chroma.sqlite3
persona/: AGENT.md  CONTACTS.md  MEMORY.md  SKILLS.md  SOUL.md  TOOLS.md  USER.md
scripts/: onboarding.py  run_whatsapp_bridge.ps1
skills/whatsapp/: AGENT.md  skill.yaml
skills/windows/: AGENT.md  skill.yaml
src/intelclaw/: __init__.py  __main__.py
src/intelclaw/agent/: __init__.py  base.py  orchestrator.py  router.py  self_improvement.py  task_planner.py
src/intelclaw/agent/sub_agents/: __init__.py  autonomous_agent.py  coding_agent.py  research_agent.py  system_agent.py  task_agent.py
src/intelclaw/cli/: __init__.py  auth.py  onboard.py
src/intelclaw/config/: __init__.py  manager.py
src/intelclaw/contacts/: __init__.py  models.py  store.py
src/intelclaw/core/: __init__.py  app.py  events.py
src/intelclaw/integrations/: __init__.py  copilot.py  jina_embeddings.py  llm_provider.py  pageindex_api.py
src/intelclaw/integrations/whatsapp/: __init__.py  inbound.py
src/intelclaw/mcp/: __init__.py  connection.py  manager.py
src/intelclaw/memory/: __init__.py  agentic_rag.py  data_store.py  embeddings.py  long_term.py  manager.py  pageindex_store.py  pageindex_watcher.py  session_store.py  short_term.py  tool_docs.py  vector_store.py  working_memory.py
src/intelclaw/perception/: __init__.py  activity_monitor.py  context_builder.py  manager.py  ocr.py  screen_capture.py  ui_automation.py
src/intelclaw/security/: __init__.py  manager.py  redaction.py
src/intelclaw/skills/: __init__.py  manager.py  models.py  router.py
src/intelclaw/teams/: __init__.py  mailbox.py  members.py  registry.py
src/intelclaw/tools/: __init__.py  base.py  converter.py  mcp_tool.py  registry.py
src/intelclaw/tools/builtin/: __init__.py  contacts.py  file_ops.py  rag.py  search.py  shell.py  system.py  web.py  windows.py  windows_extended.py
src/intelclaw/ui/: __init__.py  overlay.py  system_tray.py
src/intelclaw/web/: __init__.py  server.py
src/intelclaw/web/static/: index.html
src/intelclaw/web/static/css/: main.css
src/intelclaw/web/static/js/: app.js  websocket.js
tests/: conftest.py  test_contacts_store.py  test_functionality.py  test_long_term_local_backend.py  test_mcp_remote_tool_payload.py  test_mcp_timeouts.py  test_mcp_tool_loading.py  test_pageindex_tree_local_retrieval.py  test_session_store.py  test_skills_manager.py  test_task_planner_rewrites.py  test_tool_docs_parser.py  test_web_gateway.py  test_web_skills_api.py  test_whatsapp_inbound_service.py  test_whatsapp_mcp_smoke.py  test_windows_mcp_smoke.py
tests/fixtures/: fake_mcp_server.py  hanging_mcp_server.py
