[project]
name = "intelclaw"
version = "0.1.0"
description = "Production-grade, always-on Windows AI Agent with transparent overlay, screen monitoring, and autonomous task execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "IntelCLaw Team" }
]
keywords = ["ai-agent", "windows", "langchain", "autonomous", "react-agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # === Core AI & LLM ===
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "instructor>=1.4.0",
    # === Memory & Vector Storage ===
    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.11.0",
    # === Windows System Integration ===
    "pywin32>=306",
    "pywinauto>=0.6.8",
    "pystray>=0.19.5",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    # === Image Processing & OCR ===
    "Pillow>=10.4.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.10.0",
    # === UI Framework ===
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
    # === MCP & Tools ===
    "mcp>=1.0.0",
    "tavily-python>=0.5.0",
    # === Async & Concurrency ===
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    # === Web & API ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    # === Data Validation & Config ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tomli>=2.0.1",
    # === Utilities ===
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "watchdog>=4.0.0",
    "cryptography>=43.0.0",
    "keyring>=25.3.0",
    "qasync>=0.28.0",
    "aioconsole>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pre-commit>=3.8.0",
]
graph = [
    "neo4j>=5.24.0",
]
full = [
    "intelclaw[dev,graph]",
]

[project.scripts]
intelclaw = "main:cli"

[project.urls]
Homepage = "https://github.com/intelclaw/intelclaw"
Documentation = "https://intelclaw.readthedocs.io"
Repository = "https://github.com/intelclaw/intelclaw"
Issues = "https://github.com/intelclaw/intelclaw/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelclaw"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/persona",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/intelclaw --cov-report=term-missing"

[tool.coverage.run]
source = ["src/intelclaw"]
branch = true
